--- a/FormProject.Application/FormProject.Application.csproj
+++ b/FormProject.Application/FormProject.Application.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FormProject.Domain\FormProject.Domain.csproj" />
+    <ProjectReference Include="..\FormProject.Infrastructure\FormProject.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
